# lerobot-vla

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: test.yml
src/lerobot/configs/: eval.py  policies.py  train.py
src/lerobot/datasets/: transforms.py
src/lerobot/envs/: __init__.py  base_env.py  configs.py  factory.py  gym_env.py  maniskill_env.py
src/lerobot/envs/isaaclab/: isaaclab_env.py
src/lerobot/envs/isaaclab/environments/: __init__.py  droid_environment.py
src/lerobot/envs/isaaclab/inference/: abstract_client.py  droid_jointpos.py
src/lerobot/policies/: factory.py  normalize.py
src/lerobot/policies/pi0/: configuration_pi0.py  modeling_pi0.py  paligemma_with_expert.py
src/lerobot/policies/pi0/conversion_scripts/: convert_pi0_to_hf_lerobot.py  convert_pi0_to_hf_lerobot_old.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/: transforms.py  transforms_test.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/models/: gemma.py  gemma_fast.py  lora.py  lora_test.py  model.py  model_test.py  pi0.py  pi0_fast.py  pi0_test.py  siglip.py  tokenizer.py  tokenizer_test.py  vit.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/models/utils/: fsq_tokenizer.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/policies/: aloha_policy.py  droid_policy.py  libero_policy.py  policy.py  policy_config.py  policy_test.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/serving/: websocket_policy_server.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/shared/: array_typing.py  download.py  download_test.py  image_tools.py  image_tools_test.py  nnx_utils.py  normalize.py  normalize_test.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/training/: checkpoints.py  config.py  data_loader.py  data_loader_test.py  droid_rlds_dataset.py  optimizer.py  utils.py  weight_loaders.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi/training/misc/: roboarena_config.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi_client/: action_chunk_broker.py  base_policy.py  image_tools.py  msgpack_numpy_test.py  websocket_client_policy.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi_client/runtime/: runtime.py
src/lerobot/policies/pi0/conversion_scripts/openpi/src/openpi_client/runtime/agents/: policy_agent.py
src/lerobot/policies/pi0/models/: gemma.py  main.py  siglip.py
src/lerobot/policies/pi0_exp/: configuration_pi0_exp.py  flex_attention_exp.py  modeling_pi0_exp.py  paligemma_with_expert_exp.py
src/lerobot/policies/pi0_exp/models_exp/: main_exp.py  siglip_exp.py
src/lerobot/scripts/: convert_maniskill_to_lerobot.py  eval.py  train.py
src/lerobot/scripts/convert_maniskill_datasets/: README.md  convert_maniskill_to_lerobot.py  push_dataset_to_hub.py  replay_trajectory.py
src/lerobot/visualization/: worker.py
tests/cameras/: test_realsense.py
tests/datasets/: test_datasets.py  test_image_transforms.py
tests/envs/: test_action_space_conversion.py  test_envs.py
tests/policies/pi0/: test_attention_implementations.py  test_compare_paligemma.py  test_compare_pi0_droid.py  test_convert_from_openpi_to_lerobot.py  test_lerobot_vs_openpi.py  test_rope.py
tests/policies/pi0_exp/: test_compare_pi0_exp_to_pi0.py
tests/visualization/: test_visualization_worker.py  ws_server.py
